vpc.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "this is my first vpc creation in cloudformation",
    "Resources": {
        "myfirstvpc": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.0.0.0/16",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Myfirstvpc"
                    }
                ]
            }
        },
        "subnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "myfirstvpc"
                },
                "CidrBlock": "10.0.1.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Subnet1"
                    }
                ]
            }
        },
        "subnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "myfirstvpc"
                },
                "CidrBlock": "10.0.2.0/24",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Subnet2"
                    }
                ]
            }
        },
        "myfirstigw": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Myfirstigw"
                    }
                ]
            }
        },
        "AttachGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "myfirstvpc"
                },
                "InternetGatewayId": {
                    "Ref": "myfirstigw"
                }
            }
        },
        "publicroute": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "myfirstvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "publicroute"
                    }
                ]
            }
        },
        "routeName": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": {
                    "Ref": "publicroute"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "myfirstigw"
                }
            }
        },
        "routeTableAssocName": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "subnet1"
                },
                "RouteTableId": {
                    "Ref": "publicroute"
                }
            }
        },
        "secGroupName": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": "newsecuritygroup",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 80,
                        "ToPort": 80,
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "VpcId": {
                    "Ref": "myfirstvpc"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Newsecuritygroup"
                    }
                ]
            }
        },
        "webserver": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "KeyName": "mynewkey",
                "ImageId": "ami-0f65671a86f061fcd",
                "InstanceType": "t2.micro",
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": "0",
                        "SubnetId": {
                            "Ref": "subnet1"
                        },
                        "GroupSet": [
                            {
                                "Ref": "secGroupName"
                            }]
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "webserver"
                    }
                ],
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -ex\n",
                                "sudo apt-get update\n",
                                "sudo apt-get install apache2 -y\n"
                            ]
                        ]
                    }
                }
            }
        }
    },

    "Outputs": {
    "Ec2Ip" : {
      "Value" : {"Fn::GetAtt" : [ "webserver" , "PublicIp" ]}
    },
    
    "URL" : {
      "Value" : {"Fn::Join": ["", ["http://", {"Fn::GetAtt": ["webserver", "PublicIp"]}]]}
    }
}
    

    
}
